--- a/pom.xml
+++ b/pom.xml
@@ -30,10 +30,10 @@
         </dependency>
 
         <!-- Security -->
-        <!--<dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
-        </dependency>-->
+        </dependency>
 
         <!-- JDBC -->
         <dependency>
