--- a/pom.xml
+++ b/pom.xml
@@ -36,10 +36,10 @@
         </dependency>
 
         <!-- JDBC -->
-        <dependency>
+        <!--<dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-jdbc</artifactId>
-        </dependency>
+        </dependency>-->
 
         <!-- 내장 톰캣 -->
         <dependency>
